--- a/core/techMarket/templates/techMarket/about.html
+++ b/core/techMarket/templates/techMarket/about.html
@@ -5,13 +5,18 @@
 
 {%block content%}
 <div>
-  <p>Адрес
-Красная ул., 31, Кропоткин<br>
-<br>
-Контакты<br>
-+7 (86138) 6-64-00<br>
-
+Адрес: ул. Красная, 97/2, Кропоткин, Краснодарский край, 352383<br>
+Часы работы:<br>
+вторник	08:00–18:00<br>
+среда	08:00–18:00<br>
+четверг	08:00–18:00<br>
+пятница	08:00–18:00<br>
+суббота	08:00–18:00<br>
+воскресенье	08:00–18:00<br>
+понедельник	08:00–18:00<br>
+Предложить другие часы работы<br>
+Телефон: 8 (961) 594-68-08<br>
 </div>
 
-<div><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1664.763503583708!2d40.57647747443691!3d45.4337883445374!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YLQtdGF0L3QvtC80LDRgNC60LXRgiDQutGA0L7Qv9C-0YLQutC40L0!5e0!3m2!1sru!2sru!4v1682970781987!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+<div><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5599.4012494878425!2d40.55233144602592!3d45.43553591285769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YLQtdGF0L3QvtC80LjRgCDQutGA0L7Qv9C-0YLQutC40L0!5e0!3m2!1sru!2sru!4v1682977237230!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 {%endblock%}
