--- a/core/techMarket/templates/base.html
+++ b/core/techMarket/templates/base.html
@@ -10,9 +10,9 @@
 <body>
 <div class="top_bar">
     <ul class="top_bar_list">
-        <dev class="menu"><a class="logo" href="{%url 'techMarket:index'%}"><img class="logo" src="{% static 'techMarket/img/logo.png' %}"></img></a></dev>
+        <a href="{%url 'techMarket:index'%}"><img class="logo" src="{% static 'techMarket/img/logo.png' %}"></a>
         <li><a href="{%url 'techMarket:index'%}">Каталог</a></li>
-        <li><a href="{%url 'techMarket:About'%}">О нас</a></li>           |
+        <li><a  href="{%url 'techMarket:About'%}">О нас</a></li>           |
 
         {% if perms.unit%}
         <li><a href="{%url 'techMarket:addunit'%}">добавить товар</a></li>
