--- a/core/techMarket/templates/login.html
+++ b/core/techMarket/templates/login.html
@@ -3,28 +3,16 @@
 
 
 {%block content%}
-{% if form.errors %}
-<p>Something is wrong</p>
-{% endif %}
 
-{% if form.non_field_errors %}
-    <ul class='form-errors'>
-        {% for error in form.non_field_errors %}
-            <li>{{ error }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
 
-<form class="form-signin" action="{%url 'techMarket:login' %}" method="post">
-    <h2 class="form-signin-heading">Login</h2>
+
+{% for error in form.non_field_errors %}
+    <span class="error-message">{{ error }}</span>
+{% endfor %}
+<form id="login_form" method="post" action="{%url 'techMarket:login' %}">
     {% csrf_token %}
-
-    <input class="input-block-level" type="text" name="email" value="" id="email" placeholder="Email">
-
-    <input class="input-block-level" type="password" name="password" value="" id="username" placeholder="Password">
-
-    <button class="btn btn-large btn-primary" type="submit">Login</button>
-    <input type="hidden" name="next" value="{{next|escape}}" />
-
+    {{ form.as_p }}
+    <button type="submit">авторизироваться</button>
 </form>
+
 {%endblock%}
