--- a/core/techMarket/templates/base.html
+++ b/core/techMarket/templates/base.html
@@ -12,8 +12,8 @@
     <ul class="top_bar_list">
         <a href="{%url 'techMarket:index'%}"><img class="logo" src="{% static 'techMarket/img/logo.png' %}"></a>
         <li><a href="{%url 'techMarket:index'%}">Каталог</a></li>
-        <li><a  href="{%url 'techMarket:About'%}">О нас</a></li>           |
-        <li><a  href="{%url 'techMarket:UserQuestion'%}">Мои вопросы</a></li>           |
+        <li><a  href="{%url 'techMarket:About'%}">О нас</a></li> 
+        <li><a  href="{%url 'techMarket:UserQuestion'%}">Мои вопросы</a></li>
 
 
         {% if perms.unit%}
@@ -24,7 +24,7 @@
 
         {%else%}
         <div class="AuthBTNS">
-                <a class="reg" href="{%url 'techMarket:register'%}">Регистрация</a> <a class="log" href="{%url 'techMarket:login'%}">Войти</a>
+                <a class="reg" href="{%url 'techMarket:register'%}">Регистрация</a> | <a class="log" href="{%url 'techMarket:login'%}">Войти</a>
         </div>
         {%endif%}
     </ul>
@@ -41,5 +41,18 @@
         {%endblock%}
     </div>
 </div>
+
+<footer class="pagination">
+    <nav class="paginator">
+        <ul class="paginator">
+            {%for p in page_obj.paginator.page_range%}
+            <li>
+                <a href="?page={{p}}">{{p}}</a>
+            </li>
+            {%endfor%}
+        </ul>
+    </nav>
+</footer>
+
 </body>
 </html>
