--- a/core/techMarket/static/techMarket/css/style.css
+++ b/core/techMarket/static/techMarket/css/style.css
@@ -53,7 +53,7 @@ a{
     margin-left: auto;
     margin-right: auto;
      color:#252525;
-     background: #afd0de;!!!!!!!!!!!
+
 }
 
 .catalog > li,a,h1,h2{
@@ -73,6 +73,7 @@ a{
     border:2px solid #1784b3;
     margin-left: 20px;
     margin-top:10px;
+    background:#AFD0DE;
 
 }
 
