--- a/core/techMarket/templates/techMarket/userPage.html
+++ b/core/techMarket/templates/techMarket/userPage.html
@@ -18,3 +18,32 @@
     </ul>
 </div>
 {%endblock%}
+
+{%block aside%}
+{%if perms.unit %}
+<div class="qu">
+    {%if Questions%}
+        <p class="ts" style="color:red">нужно ответить на {{Questions}} вопросов</p>
+        <a class="btn btn_a" href="{%url 'techMarket:AdminQuestion' %}">ответить на вопросы</a>
+        <hr>
+    {%else%}
+        <p class="q_stat" style="color:green">вопросов нет</p>
+    {%endif%}
+</div>
+{%endif%}
+
+{%if group%}
+{%for g in group%}
+<div>
+    <ul class="catalog">
+        <li><a><h1>{{g.gr}}</h1></a></li>
+        {%for c in g.category_set.all%}
+        <ul>
+        <li><a  class="btn btn_a" href="{%url 'techMarket:showCategory' c.id %}">{{c.cat}}</a></li>
+        </ul>
+        {%endfor%}
+    </ul>
+</div>
+{%endfor%}
+{%endif%}
+{%endblock%}
