--- a/core/techMarket/static/techMarket/css/style.css
+++ b/core/techMarket/static/techMarket/css/style.css
@@ -24,6 +24,54 @@ a{
     color: orange;
 }
 
+.btn_a{
+    color:white
+}
+
+.q_div{
+    margin:0px;S
+    width:1200px;
+    background:#3D3D3D;
+    padding-left:30px;
+    color:white;
+}
+.form_label{
+    width:200px;
+}
+
+.h1register{
+    color:orange;
+    font-size:40px;
+}
+
+#id_captcha_1{
+    width:125px;
+}
+
+.ab{
+    background:#3D3D3D;
+    width:1200px;
+        text-align:center;
+        color:white;
+}
+
+
+
+.register{
+    margin-left:20%;
+    background:#3D3D3D;
+    width:600px;
+    border:1px solid:#3D3D3D;
+    border-radius:5px;
+    color:white;
+    padding:10px;
+
+}
+
+.btn_a:hover{
+    color: orange;
+}
+
 .AuthBTNS{
     float: right;
     margin-right: 100px;
@@ -36,23 +84,25 @@ a{
     padding: 0;
     position: relative;
     background-color:#a1a1a1;
+    display:block;
 }
 
 .aside{
     position: absolute;
     left: 0;
     top: 0;
-    width: 20%;
+    width: 19%;
     margin: 0; padding: 0;
     background: #a1a1a1;
 }
 
 .content{
-    display:flex;
-    width: 50%;
+    width: 900px;
     margin-left: auto;
     margin-right: auto;
      color:#252525;
+     display:block;
+     margin-top:0px;
 
 }
 
@@ -62,46 +112,115 @@ a{
     font-size: 20px;
 }
 .catalog{
-    margin-top: 5px;
-    padding: 10px 0px 10px 10px;
+    margin-top: 0px;
+    padding: 0px 0px 10px 10px;
     background: #3d3d3d;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
+
+
 }
 
-
+.wall{
+    display:block;
+    width:1200px;
+}
 
 .unit{
-    border:2px solid #3d3d3d;
-    margin-left: 20px;
+    margin-left:200px;
+    margin-right:auto;
     margin-top:10px;
-    background:#3d3d3d;
-    border-radius: 10px;
+    height:250px;
+    width: 700px;
+    padding: 3px;
+    border:5px solid black;
+    border-radius:10px;
+    background:#3D3D3D;
+    display:inline-flex;
 
 }
-.ph{
-	margin-left: 20px;
-	margin-top: 10px;
-}
-
 .about{
-    padding-left: 10px;
+    padding-left:10px;
+    font-size:15px;
+    position:relative;
+
+
 }
-.about h1{
+.title{
+    position:absolute;
+    top:10px;
+    left:30px;
+    width:500px;
+}
+
+.AB{
+    width:400px;
     color:white;
+    position:absolute;
+    top:70px;
 }
-.about h2{
-    color:white;
+
+.price{
+    position:absolute;
+    top:40px;
+     left:30px;
 }
-.about a{
-    color:white;
+
+.updDiv{
+    text-align:center;
 }
-.about a:hover{
-    color:orange;
+
+.answer{
+    background:#3d3d3d;
+    text-align:center;
 }
-.about p {
-	color:white;
+
+.Ans{
+    width:600px;
 }
+
+.qu{
+    background:#3d3d3d;
+    margin-bottom:0px;
+    height:55px;
+}
+
+.sds{
+    text-align:center;
+}
+
+.ts{
+    margin-bottom:0px;
+}
+
+.q_stat{
+     margin-bottom:0px;
+}
+
+.upd_b{
+    width:30px;
+    height:30px;
+}
+
+.del_btn{
+    color:white:
+    border:2px solid #b71919;
+    border-radius:2px;
+}
+
+.u_btn{
+    position:absolute;
+    top:185px;
+    width:300px;
+
+    left:1000;
+
+}
+
+.ph{
+    width:200px;
+    padding:5px;
+
+}
+
 
 
 .updUnit{
@@ -109,21 +228,33 @@ a{
     height: 30px;
 }
 
+.title_u{
+    margin-left:400px;;
+    margin-right:auto;
+
+}
+
+
 .logo {
     width:120px;
     height:120px;
 }
 
-
+.div_units{
+    width:900px;
+    background:#4f4f4f;
+    padding:10px;
+    color:white;
+    border-bottom:10px;
+}
 .search{
-    margin-left: 28%;
-    display: flex;
-    background: #f7eed7;
-    padding: 10px;
-    width:300px;
-    border: 2px solid #dbd3bf;
-    border-bottom-left-radius:5px;
-    border-bottom-right-radius: 5px;
+    width:1200px;
+    margin:0px;
+}
+
+.q_stat{
+    margin:0px;
+    margin-bottom:16px;
 }
 
 .buttonsch{
@@ -169,7 +300,7 @@ a{
 }
 .body{
 	background:#a1a1a1;
-	width: 1920px;
+	width: 1500px;
 	margin-left: auto;
 	margin-right: auto;
 }
