--- a/core/techMarket/templates/User_Questions.html
+++ b/core/techMarket/templates/User_Questions.html
@@ -3,36 +3,18 @@
 
 {%block title%}Мои Вопросы{%endblock%}
 
-{%block aside%}
 
-{%if group%}
-    {%for g in group%}
-    <div>
-        <ul class="catalog">
-            <li><a><h1>{{g.gr}}</h1></a></li>
-            {%for c in g.category_set.all%}
-            <ul>
-            <li><a href="{%url 'techMarket:showCategory' c.id %}"><h2>{{c.cat}}</h2></a></li>
-            </ul>
-            {%endfor%}
-
-        </ul>
-
-    </div>
-    {%endfor%}
-{%endif%}
-{%endblock%}
 
 
 {%block content%}
 
 {% if page_obj %}
     {%for q in page_obj%}
-    <div style="border: solid 3px gray">
-        <h1>Вопрос{{q.unit}}</h1>
-        <p>{{q.question}}</p>
+    <div class="q_div"style="border: solid 3px gray">
+        <h1 style="color:white">Вопрос{{q.unit}}</h1>
+        <p style="color:white">{{q.question}}</p>
         {%if q.choice%}
-        <p> ответ:<br>{{q.choice}}</p>
+        <p style="color:white" > ответ:<br>{{q.choice}}</p>
         {%else%}
         <br>
         <br>
@@ -44,16 +26,34 @@
 <p>вы ещё не задавали вопросы, задать его можно в вкладке описания товара</p>
 {%endif%}
 
-<footer class="pagination">
-    <nav class="paginator">
-        <ul class="paginator">
-            {%for p in page_obj.paginator.page_range%}
-            <li>
-                <a href="?page={{p}}">{{p}}</a>
-            </li>
-            {%endfor%}
-        </ul>
-    </nav>
-</footer>
 
+{%endblock%}
+
+{%block aside%}
+{%if perms.unit %}
+<div class="qu">
+    {%if Questions%}
+        <p class="ts" style="color:red">нужно ответить на {{Questions}} вопросов</p>
+        <a class="btn btn_a" href="{%url 'techMarket:AdminQuestion' %}">ответить на вопросы</a>
+        <hr>
+    {%else%}
+        <p class="q_stat" style="color:green">вопросов нет</p>
+    {%endif%}
+</div>
+{%endif%}
+
+{%if group%}
+{%for g in group%}
+<div>
+    <ul class="catalog">
+        <li><a><h1>{{g.gr}}</h1></a></li>
+        {%for c in g.category_set.all%}
+        <ul>
+        <li><a  class="btn btn_a" href="{%url 'techMarket:showCategory' c.id %}">{{c.cat}}</a></li>
+        </ul>
+        {%endfor%}
+    </ul>
+</div>
+{%endfor%}
+{%endif%}
 {%endblock%}
