--- a/core/techMarket/templates/base.html
+++ b/core/techMarket/templates/base.html
@@ -7,31 +7,42 @@
     <link rel="stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'techMarket/css/style.css' %}">
 </head>
+
 <body>
-    <div class="body">
+
+<div class="body">
+
     <div class="logotop">
        <a class="logotopbar" href="{%url 'techMarket:index'%}"><img class="logo" src="{% static 'techMarket/img/logo.png' %}"></a>
-    </div>   
+    </div>
+
 <div class="top_bar">
     <ul class="top_bar_list">
-        <li><a href="{%url 'techMarket:index'%}">Каталог</a></li>
-        <li><a  href="{%url 'techMarket:About'%}">О нас</a></li> 
-        <li><a  href="{%url 'techMarket:UserQuestion'%}">Мои вопросы</a></li>
+        <li><a class="btn btn_a" href="{%url 'techMarket:index'%}">Каталог</a></li>
+        <li><a class="btn btn_a" href="{%url 'techMarket:About'%}">О нас</a></li>
+        <li><a class="btn btn_a" href="{%url 'techMarket:UserQuestion'%}">Мои вопросы</a></li>
 
 
         {% if perms.unit%}
-        <li><a href="{%url 'techMarket:addunit'%}">добавить товар</a></li>
+        <li><a class="btn btn_a" href="{%url 'techMarket:addunit'%}">добавить товар</a></li>
         {%endif%}
-
+        <div class="AuthBTNS">
         {% if user.is_authenticated%}
 
+            <p>{{request.user}}  <a class="btn btn_a" class="log" href="{%url 'techMarket:exit'%}">выйти</a></p>
+
+
         {%else%}
-        <div class="AuthBTNS">
-                <a class="reg" href="{%url 'techMarket:register'%}">Регистрация</a> | <a class="log" href="{%url 'techMarket:login'%}">Войти</a>
-        </div>
+
+                <a class="btn btn_a" class="reg" href="{%url 'techMarket:register'%}">Регистрация</a> <a class="btn btn_a" class="log" href="{%url 'techMarket:login'%}">Войти</a>
+
         {%endif%}
+        </div>
     </ul>
+
 </div>
+
+
 <div class="main">
     <div class="aside">
         {%block aside%}
@@ -44,6 +55,7 @@
     </div>
 </div>
 
+
 <footer class="pagination">
     <nav class="paginator">
         <ul class="paginator">
@@ -55,6 +67,8 @@
         </ul>
     </nav>
 </footer>
+
 </div>
+
 </body>
 </html>
