--- a/core/techMarket/templates/register.html
+++ b/core/techMarket/templates/register.html
@@ -3,6 +3,7 @@
 
 
 {%block content%}
+<div class="register">
 <h1 class="h1register">Регистрация</h1>
 <form method="post">
     {%csrf_token%}
@@ -13,7 +14,8 @@
 
     {%endfor%}
 
-    <button type="submit">Зарегистрироваться</button>
+    <button class="btn btn_a" type="submit">Зарегистрироваться</button>
 
 </form>
+</div>
 {%endblock%}
