--- a/core/techMarket/templates/techMarket/about.html
+++ b/core/techMarket/templates/techMarket/about.html
@@ -2,9 +2,39 @@
 {%load static%}
 
 {%block title%}о нас{%endblock%}
+{%block aside%}
+{%if perms.unit %}
+<div class="qu">
+    {%if Questions%}
+        <p class="ts" style="color:red">нужно ответить на {{Questions}} вопросов</p>
+        <a class="btn btn_a" href="{%url 'techMarket:AdminQuestion' %}">ответить на вопросы</a>
+        <hr>
+    {%else%}
+        <p class="q_stat" style="color:green">вопросов нет</p>
+    {%endif%}
+</div>
+{%endif%}
+
+{%if group%}
+{%for g in group%}
+<div>
+    <ul class="catalog">
+        <li><a><h1>{{g.gr}}</h1></a></li>
+        {%for c in g.category_set.all%}
+        <ul>
+        <li><a  class="btn btn_a" href="{%url 'techMarket:showCategory' c.id %}">{{c.cat}}</a></li>
+        </ul>
+        {%endfor%}
+    </ul>
+</div>
+{%endfor%}
+{%endif%}
+{%endblock%}
+
 
 {%block content%}
-<div>
+<div class="ab">
+
 Адрес: ул. Красная, 97/2, Кропоткин, Краснодарский край, 352383<br>
 Часы работы:<br>
 вторник	08:00–18:00<br>
@@ -16,7 +46,8 @@
 понедельник	08:00–18:00<br>
 Предложить другие часы работы<br>
 Телефон: 8 (961) 594-68-08<br>
-</div>
 
-<div><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5599.4012494878425!2d40.55233144602592!3d45.43553591285769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YLQtdGF0L3QvtC80LjRgCDQutGA0L7Qv9C-0YLQutC40L0!5e0!3m2!1sru!2sru!4v1682977237230!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+
+<div class="g_cart"><iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d5599.4012494878425!2d40.55233144602592!3d45.43553591285769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YLQtdGF0L3QvtC80LjRgCDQutGA0L7Qv9C-0YLQutC40L0!5e0!3m2!1sru!2sru!4v1682977237230!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 {%endblock%}
+</div>
