--- a/core/techMarket/static/techMarket/css/style.css
+++ b/core/techMarket/static/techMarket/css/style.css
@@ -28,6 +28,30 @@ a{
     color:white
 }
 
+.img_del{
+    width:30px;
+    height:30px;
+}
+
+.del_label{
+    width:100px;
+}
+
+.div_g{
+    margin-top:30px;
+    width:920px;
+     background:#3D3D3D;
+     color:white;
+     margin-left:50px;
+     border-radius:5px;
+
+}
+
+.sdsvv{
+    width:200px;
+}
+
+
 .q_div{
     margin:0px;S
     width:1200px;
@@ -91,7 +115,7 @@ a{
     position: absolute;
     left: 0;
     top: 0;
-    width: 19%;
+    width: 20%;
     margin: 0; padding: 0;
     background: #a1a1a1;
 }
